--- a/Week 2/Bootstrap4/conFusion/index.html
+++ b/Week 2/Bootstrap4/conFusion/index.html
@@ -43,6 +43,9 @@
                 <div class="col-12 col-sm align-self-center">
                     <img src="img/logo.png">
                 </div>
+                <div class="col-12 col-sm align-self-center">
+                    <a class="btn btn-block btn-small btn-warning" href="#reservetable" role="button">Reserve Table</a>
+                </div>
             </div>
         </div>
     </header>
@@ -63,14 +66,18 @@
             </div>
         </div>
 
-
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                    <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="buffet">
+                </div>
             </div>
         </div>
 
@@ -85,6 +92,67 @@
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
                         <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row row-content justify-content-center">
+            <div class="col-12 col-sm-8 align-self-center">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <form id="reservetable">
+                            <div class="form-group row align-items-center">
+                                <label for="numberofguest" class="col-12 col-sm-2 col-form-label">Number of Guests</label> 
+                                <div class="col-12 col-sm">
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label" for="numberofguest1">
+                                            <input class="form-check-input" type="radio" id="numberofguest1" name="numberofguest" value="1"> 1  
+                                        </label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label" for="numberofguest2">
+                                            <input class="form-check-input" type="radio" id="numberofguest2" name="numberofguest" value="2"> 2 
+                                        </label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label" for="numberofguest3">
+                                            <input class="form-check-input" type="radio" id="numberofguest3" name="numberofguest" value="3"> 3 
+                                        </label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label" for="numberofguest4">
+                                            <input class="form-check-input" type="radio" id="numberofguest4" name="numberofguest" value="4"> 4 
+                                        </label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label" for="numberofguest5">
+                                            <input class="form-check-input" type="radio" id="numberofguest5" name="numberofguest" value="5"> 5 
+                                        </label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label" for="numberofguest6">
+                                            <input class="form-check-input" type="radio" id="numberofguest6" name="numberofguest" value="6"> 6 
+                                        </label>
+                                    </div>
+                                </div> 
+                            </div>
+                            <div class="form-group row align-items-center">
+                                <label for="dateandtime" class="col-12 col-sm-2 col-form-label">Date and Time</label>
+                                <div class="col-12 col-sm-5">
+                                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                                </div>
+                                <div class="col-12 col-sm-5">
+                                    <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                                </div>
+                            </div>
+                            <div class="form-group row align-items-center">
+                                <div class="col-12 offset-sm-2 col-sm-10">
+                                    <button type="submit" class="btn btn-primary">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
