--- a/Week 4/Bootstrap4/conFusion/index.html
+++ b/Week 4/Bootstrap4/conFusion/index.html
@@ -216,6 +216,7 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
+                    <!-- Pause & Play using 2 Buttons
                     <div class="btn-group" id="carouselButton">
                         <button class="btn btn-danger btn-sm" id="carousel-pause">
                             <span class="fa fa-pause"></span>
@@ -224,6 +225,10 @@
                             <span class="fa fa-play"></span>
                         </button>
                     </div>
+                    -->
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
+                        <span class="fa fa-pause"></span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -391,6 +396,7 @@
         });
     </script>
     -->
+    <!-- Script for Pause & Play using 2 Buttons
     <script>
         $(document).ready(function() {
             $('#mycarousel').carousel({ interval: 2000});
@@ -399,6 +405,24 @@
             });
             $('#carousel-play').click(function() {
                 $('#mycarousel').carousel('cycle');
+            });
+        });
+    </script>
+    -->
+    <script>
+        $(document).ready(function() {
+            $('#mycarousel').carousel({ interval: 2000});
+            $('#carouselButton').click(function() {
+                if ($('#carouselButton').children('span').hasClass('fa-pause')) {
+                    $('#mycarousel').carousel('pause');
+                    $('#carouselButton').children('span').removeClass('fa-pause');
+                    $('#carouselButton').children('span').addClass('fa-play');
+                }
+                else if ($('#carouselButton').children('span').hasClass('fa-play')) {
+                    $('#mycarousel').carousel('cycle');
+                    $('#carouselButton').children('span').removeClass('fa-play');
+                    $('#carouselButton').children('span').addClass('fa-pause');
+                }
             });
         });
     </script>
