--- a/Week 4/Bootstrap4/conFusion/index.html
+++ b/Week 4/Bootstrap4/conFusion/index.html
@@ -34,7 +34,7 @@
                     <a data-toggle="modal" data-target="#loginModal">
                         <span class="fa fa-sign-in"></span> Login
                     </a>
-                    -->
+                 buttons occupy entire div space   -->
                     <a id="loginButton"><span class="fa fa-sign-in"></span> Login</a>
                 </span>
             </div>
@@ -126,13 +126,15 @@
                         </div>
                         <div class="form-group row align-items-center">
                             <label for="section" class="col-12 col-sm-2 col-form-label">Section</label>
-                            <div class="btn-group btn-group-toggle col-12 col-sm-10" data-toggle="buttons">
-                                <label class="btn btn-success active">
-                                    <input type="radio" name="section" id="non-smoking-section" autocomplete="off" checked>Non-Smoking
-                                </label>
-                                <label class="btn btn-danger">
-                                    <input type="radio" name="section" id="smoking-section" autocomplete="off">Smoking
-                                </label>
+                            <div class="col-12 col-sm-10">
+                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-success active">
+                                        <input type="radio" name="section" id="non-smoking-section" autocomplete="off" checked>Non-Smoking
+                                    </label>
+                                    <label class="btn btn-danger">
+                                        <input type="radio" name="section" id="smoking-section" autocomplete="off">Smoking
+                                    </label>
+                                </div>
                             </div>
                         </div>
                         <div class="form-group row align-items-center">
@@ -415,29 +417,7 @@
         });
     </script>
     -->
-    <script>
-        $(document).ready(function() {
-            $('#mycarousel').carousel({ interval: 2000});
-            $('#carouselButton').click(function() {
-                if ($('#carouselButton').children('span').hasClass('fa-pause')) {
-                    $('#mycarousel').carousel('pause');
-                    $('#carouselButton').children('span').removeClass('fa-pause');
-                    $('#carouselButton').children('span').addClass('fa-play');
-                }
-                else if ($('#carouselButton').children('span').hasClass('fa-play')) {
-                    $('#mycarousel').carousel('cycle');
-                    $('#carouselButton').children('span').removeClass('fa-play');
-                    $('#carouselButton').children('span').addClass('fa-pause');
-                }
-            });
-            $('#reservetableButton').click(function() {
-                $('#reservetableModal').modal('show');
-            });
-            $('#loginButton').click(function() {
-                $('#loginModal').modal('show');
-            });
-        });
-    </script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
